# monarch

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  deps.bzl
hack/k8s/: manifest.yaml  namespace.yaml
hack/mitigrations/: company_sequence.sql
modules/api/: BUILD.bazel  go.mod  main.go
modules/api/pkg/dataaccess/: BUILD.bazel  common.go  sql.go
modules/api/pkg/domain/: BUILD.bazel  entities.go  interfaces.go  models.go
modules/api/pkg/router/: BUILD.bazel  common.go  company.go  industry.go  job.go  science.go
modules/api/pkg/service/: BUILD.bazel  company.go  industry.go  job.go  science.go
modules/web-server/: Dockerfile  bun.lockb  package.json
modules/web-server/src/: providers.tsx
modules/web-server/src/app/: layout.tsx
modules/web-server/src/app/lib/: actions.ts  api.ts  constants.ts  definitions.ts  utils.ts
modules/web-server/src/app/market/: layout.tsx
modules/web-server/src/app/market/applications/: page.tsx
modules/web-server/src/app/market/companies/: page.tsx
modules/web-server/src/app/market/companies/add/: page.tsx
modules/web-server/src/app/ui/: skeletons.tsx
modules/web-server/src/app/ui/applications/: applications-table-container.tsx  applications-table.tsx  table.tsx
modules/web-server/src/app/ui/common/: paginated-table.tsx
modules/web-server/src/app/ui/companies/: add-form.tsx  buttons.tsx  companies-table-container.tsx  companies-table.tsx  table.tsx
modules/web-server/src/app/ui/market/: sidenav.tsx
