load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dataaccess",
    srcs = ["common.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@io_gorm_driver_postgres//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
    ],
)
