load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "router",
    srcs = [
        "common.go",
        "company.go",
        "industry.go",
        "job.go",
        "science.go",
    ],
    importpath = "github.com/HanNguyen-dev/monarch/api/pkg/router",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/api/pkg/domain",
        "//modules/api/pkg/service",
        "@com_github_gin_gonic_gin//:gin",
    ],
)
