load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "company.go",
        "industry.go",
        "job.go",
    ],
    importpath = "github.com/HanNguyen-dev/monarch/api/pkg/service",
    visibility = ["//visibility:public"],
    deps = [
        "//modules/api/pkg/dataaccess",
        "//modules/api/pkg/domain",
    ],
)
